# dji_rs3pro_ros_controller

./: .gitignore  .gitmodules  README.md  control_gimbal_angle_w_imu_camera.sh  docker_run.sh  docker_run_gimbal.sh  record_bag_data.sh  run_all_equip.sh  run_realsense.sh  run_xsense.sh
dji_rs2_ros_controller/: CMakeLists.txt  package.xml
dji_rs3pro_ros_controller/: CMakeLists.txt  package.xml
dji_rs3pro_ros_controller/launch/: check_angle_detection_delay.launch  control_gimbal_angle.launch  gimbal_test.launch  rosbag2dataset.launch
dji_rs3pro_ros_controller/msg/: EularAngle.msg
dji_rs3pro_ros_controller/scripts/: can_bus_controller.py  check_angle_detection_delay.py  check_sum.py  control_gimbal_angle.py  rosbag2dataset.py
dji_rs3pro_ros_controller/srv/: SendJointPos.srv
dji_rs3pro_ros_controller/yaml/: control_gimbal_angle.yaml  rosbag2dataset.yaml
docker/: Dockerfile  Dockerfile_DJI  Dockerfile_IMU  Dockerfile_Realsense  docker_build.sh  docker_build_component.sh
shell_scripts/: docker_run_imu.sh  docker_run_realsense.sh
